<?xml version="1.0"?>
<package>
  <name>motor_roboteq_modbus</name>
  <version>1.0.0</version>
  <description>Roboteq modbus</description>
  <maintainer email="dheera@dheera.net">dheera</maintainer>
  <license>BSD</license>
  <url type="website">http://dheera.net</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <export>
    <architecture_independent/>
  </export>
</package>

