<?xml version="1.0"?>
<package>
  <name>roboteq_modbus</name>
  <version>1.0.0</version>
  <description>Roboteq modbus</description>
  <maintainer email="dheera@dheera.net">dheera</maintainer>
  <license>BSD</license>
  <url type="website">http://robby.io</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <build_depend>robby_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robby_msgs</run_depend>
  <export>
    <architecture_independent/>
  </export>
</package>

